--- a/src/main/resources/templates/informe_tecnico.html
+++ b/src/main/resources/templates/informe_tecnico.html
@@ -55,24 +55,39 @@
                         <div class="body">
                             <form action="../../../../hardware-servicio/add_informe" method="POST">
                                 <!--<input type="hidden" name="id_detalleSolucion" th:value="${detalleSolucion.id_detalleSolucion}">-->
-                                <h2 class="card-inside-title">SERVICIOS REALIZADOS</h2>
-                                <div class="demo-checkbox">     
-                                    
-                                    <th:block th:each="se : ${tipoequipo.solucionEquipos}" th:if="${se.estado != 'X'}">
-                                        
-                                        <th:block th:each="ds : ${servicio.detalleSolucions}" >
-                                        
-
-                                            <input th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}" name="id_solucion"  th:value="${se.solucion.id_solucion}" type="checkbox"  class="filled-in chk-col-red"checked disabled />
-                                            <label th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}" th:text="${se.solucion.solucion}"></label>
-
-                                            
+                                <th:block th:if="${servicio.detalleSolucions.size() > 0}">
+                                    <h2 class="card-inside-title">SERVICIOS REALIZADOS CHECKEADOS</h2>
+                                    <div class="demo-checkbox">
+                                
+                                        <th:block th:each="se : ${tipoequipo.solucionEquipos}" th:if="${se.estado != 'X'}">
+                                
+                                            <th:block th:each="ds : ${servicio.detalleSolucions}" th:if="${ds.estado == 'A'}">
+                                
+                                
+                                                <input th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}" 
+                                                    th:value="${se.solucion.id_solucion}" type="checkbox" class="filled-in chk-col-red" checked
+                                                    disabled />
+                                                <label th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}"
+                                                    th:text="${se.solucion.solucion}"></label>
+                                
+                                            </th:block>
+                                                                
                                         </th:block>
-                                        
-                                        <input  name="id_solucion"  th:value="${se.solucion.id_solucion}" th:id="${se.solucion.id_solucion}" type="checkbox"  class="filled-in chk-col-red"  />
-                                        <label  th:text="${se.solucion.solucion}" th:for="${se.solucion.id_solucion}"></label>
+                                
+                                    </div>
+                                </th:block>
 
+                                <h2 class="card-inside-title">SERVICIOS REALIZADOS</h2>
+                                <div class="demo-checkbox">
+                                
+                                    <th:block th:each="se : ${tipoequipo.solucionEquipos}" th:if="${se.estado != 'X'}">
+                                
+                                        <input name="id_solucion" th:value="${se.solucion.id_solucion}" th:id="${se.solucion.id_solucion}"
+                                            type="checkbox" class="filled-in chk-col-red" />
+                                        <label th:text="${se.solucion.solucion}" th:for="${se.solucion.id_solucion}"></label>
+                                
                                     </th:block>
+                                
                                 </div>
                                 
                                 <h2 class="card-inside-title">OBSERVACIONES</h2>
@@ -80,7 +95,7 @@
                                     <div class="col-sm-12">
                                         <div class="form-group">
                                             <div class="form-line">
-                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.observacion}"  class="form-control no-resize" placeholder="Descripcion..."></textarea>
+                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.observacion}"  class="form-control no-resize" placeholder="Descripcion..." required></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -91,7 +106,7 @@
                                         <div class="form-group">
                                             <div class="form-line">
                                                 <input type="hidden" th:field="${servicio.id_servicio}" >
-                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.conclucion}"  class="form-control no-resize" placeholder="Descripción..."></textarea>
+                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.conclucion}"  class="form-control no-resize" placeholder="Descripción..." required></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -101,7 +116,7 @@
                                     <div class="col-sm-12">
                                         <div class="form-group">
                                             <div class="form-line">
-                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.recomendacion}" class="form-control no-resize" placeholder="Descripcion..."></textarea>
+                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.recomendacion}" class="form-control no-resize" placeholder="Descripcion..." required></textarea>
                                             </div>
                                         </div>
                                     </div>
