--- a/src/main/resources/templates/ficha_tecnica.html
+++ b/src/main/resources/templates/ficha_tecnica.html
@@ -210,7 +210,7 @@
                                     <th scope="row" >SERVICIOS REALIZADOS :</th>
                                     <td colspan="4">
                                         <div class="row">
-                                            <th:block th:each="det : ${servicio.detalleSolucions}">                             
+                                            <th:block th:each="det : ${servicio.detalleSolucions}" th:if="${det.estado != 'X'}">                             
                                                 <li class="col-6" style="text-transform:uppercase" th:text="${det.solucion.solucion}">   
                                                 </li>                            
                                             </th:block>
