--- a/src/main/resources/templates/informe_preventivo.html
+++ b/src/main/resources/templates/informe_preventivo.html
@@ -55,24 +55,37 @@
                         <div class="body">
                             <form action="../../../../hardware-servicio/add_informe_preventivo" method="POST">
                                 <!--<input type="hidden" name="id_detalleSolucion" th:value="${detalleSolucion.id_detalleSolucion}">-->
+                                <th:block th:if="${servicio.detalleSolucions.size() > 0}">
+                                    <h2 class="card-inside-title">SERVICIOS REALIZADOS CHECKEADOS</h2>
+                                    <div class="demo-checkbox">
+                                
+                                        <th:block th:each="se : ${tipoequipo.solucionEquipos}" th:if="${se.estado != 'X'}">
+                                
+                                            <th:block th:each="ds : ${servicio.detalleSolucions}" th:if="${ds.estado == 'A'}">
+                                
+                                
+                                                <input th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}"
+                                                    th:value="${se.solucion.id_solucion}" type="checkbox" class="filled-in chk-col-red" checked
+                                                    disabled />
+                                                <label th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}"
+                                                    th:text="${se.solucion.solucion}"></label>
+                                
+                                            </th:block>
+                                
+                                        </th:block>
+                                
+                                    </div>
+                                </th:block>
                                 <h2 class="card-inside-title">SERVICIOS REALIZADOS</h2>
                                 <input type="hidden" th:field="${servicio.id_servicio}" >
-                                <div class="demo-checkbox">     
-                                    
+                                <div class="demo-checkbox">
+                                
                                     <th:block th:each="se : ${tipoequipo.solucionEquipos}" th:if="${se.estado != 'X'}">
-                                        
-                                        <th:block th:each="ds : ${servicio.detalleSolucions}" >
-                                        
-
-                                            <input th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}" name="id_solucion"  th:value="${se.solucion.id_solucion}" type="checkbox"  class="filled-in chk-col-red"checked disabled />
-                                            <label th:if="${ds.solucion.id_solucion == se.solucion.id_solucion}" th:text="${se.solucion.solucion}"></label>
-
-                                            
-                                        </th:block>
-                                        
-                                        <input  name="id_solucion"  th:value="${se.solucion.id_solucion}" th:id="${se.solucion.id_solucion}" type="checkbox"  class="filled-in chk-col-red"  />
-                                        <label  th:text="${se.solucion.solucion}" th:for="${se.solucion.id_solucion}"></label>
-
+                                
+                                        <input name="id_solucion" th:value="${se.solucion.id_solucion}" th:id="${se.solucion.id_solucion}"
+                                            type="checkbox" class="filled-in chk-col-red" />
+                                        <label th:text="${se.solucion.solucion}" th:for="${se.solucion.id_solucion}"></label>
+                                
                                     </th:block>
                                 </div>
                                 
@@ -81,11 +94,12 @@
                                     <div class="col-sm-12">
                                         <div class="form-group">
                                             <div class="form-line">
-                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.observacion}"  class="form-control no-resize" placeholder="Descripcion..."></textarea>
+                                                <textarea type="text" rows="2" style="text-transform:uppercase;" th:field="${servicio.observacion}"
+                                                    class="form-control no-resize" placeholder="Descripcion..."></textarea>
                                             </div>
                                         </div>
                                     </div>
-                                </div>   
+                                </div>
                              
                                 <br><button type="submit" class="btn btn-primary m-t-15 waves-effect">ENVIAR</button>
                                     
