--- a/src/main/resources/templates/ficha_tecnica.html
+++ b/src/main/resources/templates/ficha_tecnica.html
@@ -172,7 +172,7 @@
                                     <th scope="row">FALLAS :</th>
                                     <td colspan="4">
                                         <div class="row">
-                                            <th:block th:each="det : ${servicio.detalleFallas}">                             
+                                            <th:block th:each="det : ${servicio.detalleFallas}" th:if="${det.estado_detalleFalla != 'X'}">                             
                                                 <li class="col-6" style="text-transform:uppercase" th:text="${det.falla.falla}">   
                                                 </li>                            
                                             </th:block>
