--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -102,7 +102,7 @@
                                                 <td th:text="${ser.almacen.cod_equipo}"></td>
                                                 <td th:text="${ser.tipoEquipo.equipo}"></td>
                                                 <td >
-                                                    <th:block th:each="det : ${ser.detalleFallas}">
+                                                    <th:block th:each="det : ${ser.detalleFallas}" th:if="${det.estado_detalleFalla != 'X'}">
                                                         <ul >
                                                             <li th:text="${det.falla.falla}">   
                                                             </li>
@@ -237,7 +237,7 @@
                                                 <td th:text="${ser.almacen.cod_equipo}"></td>
                                                 <td th:text="${ser.tipoEquipo.equipo}"></td>
                                                 <td >
-                                                    <th:block th:each="det : ${ser.detalleFallas}">
+                                                    <th:block th:each="det : ${ser.detalleFallas}" th:if="${det.estado_detalleFalla != 'X'}">
                                                         <ul >
                                                             <li th:text="${det.falla.falla}">   
                                                             </li>
